# DiscreteStructures

./: .gitignore  CMakeLists.txt  README.md
Lab1/: functions.cpp  main.cpp
Lab2/: main.cpp  setFunctions.cpp  setFunctions.h
